prevent place title from overflowing
- if the street name + city does not fit on one line, it will be truncated with ellipsis
- also decreased the font size to 15 to make it a little less likely to need truncation at all

--- a/www/css/main.diary.css
+++ b/www/css/main.diary.css
@@ -237,10 +237,14 @@ a.item-content {
 .card-title {
   display: flex;
   justify-content: center;
+  font-size: 15px;
+  padding-inline: 10px;
 }
 
 .card-title b {
   margin-left: 10px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .diary-button {
